src/test/deca/context/valid/with_object/cast_compatibility.deca
class T1 {}
class T2 extends T1 {}
class T{}
{
    T1 a = new T1();
    T2 b = new T2();

    (T1) (a);
    (T2) (b);
    (T1) (b);
    (T2) (a);

    T1 aa = (T1) (b);
    T2 bb = (T2) (a); // Celle là n'est pas habituelle ...

    (T1) (new T1());
    (T2) (new T2());
    (T2) (new T1());
    (T1) (new T2());
}